--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,5 +49,6 @@ values        <string name="title_activity_club_details">Club Details</string>
     <string name="drawer_close">Menu closed</string>
     <string name="NavItemAttendance">Attendance</string>
     <string name="NavItemUsers">Users</string>
+    <string name="ADD_ATTENDANCE">Add Attendance</string>
 
 </resources>
